# AI-Trader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _smoke_syms.txt  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
config/: config.yaml  cost_model.yaml  notifications.yaml  nse_holidays.yaml  stock_to_sector.csv  stocks_universe.txt
docker/: scheduler-entrypoint.sh  web-entrypoint.sh
scripts/: _smoke_wf.py  arm_compat_check.py  assess_universe.py  audit_splits.py  backfill_regimes.py  build_features.py  db_diagnose.py  db_inspect.py  experiment_label_mode.py  forecast_targets.py  ingest_angelone.py  ingest_bhavcopy.py  ingest_fundamentals.py  ingest_indices.py  ingest_yfinance.py  init_db.py  inspect_backtests.py  inspect_models.py  predict_today.py  run_backtest.py  run_daily.py  run_rules_backtest.py  run_scheduler.py  run_stress_tests.py  run_week1_pipeline.py  run_week2_pipeline.py  run_week3_pipeline.py  run_week4_pipeline.py  scan_pairs.py  score_news.py  seed_data.py  seed_sectors.py  send_daily_report.py  serve_web.py  setup_windows_scheduler.ps1  spot_check_features.py  train_horizon_models.py  train_model.py  validate_data.py  walk_forward_eval.py
src/: __init__.py
tests/: conftest.py  test_backtest_metrics.py  test_breadth.py  test_calendar.py  test_calibration.py  test_contracts.py  test_cost_model.py  test_dataset.py  test_discovery.py  test_engine.py  test_feasibility.py  test_feature_builder.py  test_finbert_scorer.py  test_forecast.py  test_horizon_forecaster.py  test_leakage_audit.py  test_logger_redaction.py  (+32 more)
(+160 files in other folders)
